<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tradenum_query_success"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tradenum"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:id="@+id/tradenum_textview" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/trade_time"
        android:id="@+id/trade_time_textview" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_cardnum"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:id="@+id/trade_cardnum_textview" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumption_amount"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="500.00"
            android:id="@+id/amount_tradenum_query"
            android:textColor="#CD6839"
            android:textSize="25dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuan"
            android:textSize="20dp" />

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:textColor="@color/fontcolor"
        android:textStyle="bold"
        android:id="@+id/next_tradenum_query_next"
        android:background="@drawable/login_background"/>
</LinearLayout>
