<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:id="@+id/success_title"
        android:text="@string/trade_success"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardnum_text"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:id="@+id/cardnum_tradesuccess" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:text="@string/merchants_num"
        android:id="@+id/merchantsnum_tradesuccess" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_num"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/tradenum_tradesuccess" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumption_amount"
            android:id="@+id/amount_textview"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="500.00"
            android:id="@+id/amount_tradesuccess"
            android:textColor="#CD6839"
            android:textSize="25dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuan"
            android:textSize="20dp" />

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_print"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"
        android:textColor="@color/fontcolor"
        android:textStyle="bold"
        android:id="@+id/sign_print_button"
        android:background="@drawable/login_background"/>

</LinearLayout>
