<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:text="@string/query_success"
        android:layout_marginTop="40dp"
        android:textSize="40dp"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardnum_text"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:id="@+id/card_num_textview"
        android:textSize="20dp"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Available_balance"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="500.00"
            android:id="@+id/banlance_textview"
            android:textColor="#CD6839"
            android:textSize="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuan"
            android:textSize="20dp" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/fontcolor"
        android:textStyle="bold"
        android:text="@string/back"
        android:background="@drawable/button_press"
        android:layout_gravity="center_horizontal"
        android:id="@+id/back_button"/>

</LinearLayout>
