<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/operator_num"
    android:layout_marginTop="50dp"
    android:inputType="text"
    android:maxLines="1"
    android:id="@+id/operatornum"
    android:digits="0123456789"
    android:textSize="20dp"
    android:singleLine="true"
    android:gravity="center"
    android:background="@drawable/login_input_background"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="20dp"
        android:id="@+id/operatorpw"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:gravity="center"
        android:background="@drawable/login_input_background"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/fontcolor"
        android:layout_marginTop="30dp"
        android:id="@+id/operatornext"
        android:text="@string/next"
        android:textSize="25dp"
        android:background="@drawable/button_press"/>
</LinearLayout>
