<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/query_error"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textSize="40dp"
        android:id="@+id/error_title"
        />
    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/error_message"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_message_textview"
        android:text="@string/network_error"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="#CD6839"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColor="@color/fontcolor"
        android:textStyle="bold"
        android:text="@string/back"
        android:background="@drawable/button_press"
        android:layout_gravity="center_horizontal"
        android:id="@+id/error_back_button"

        />

</LinearLayout>
