<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/merchants_num"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/merchantsnum_consumption_textview" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="40dp"
    >
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
       android:text="0.00"
        android:textSize="50dp"
        android:focusable="false"
        android:background="@drawable/editbackground"
        android:id="@+id/input_amount_edittext"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:text="@string/yuan"/>
</LinearLayout>

<Button
    android:layout_width="320dp"
    android:layout_height="60dp"
    android:background="@drawable/button_press"
    android:text="@string/confirm_amount"
    android:textStyle="bold"
    android:textColor="@color/fontcolor"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="30dp"
    android:id="@+id/input_amount_confirm"
    />
<include
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    layout="@layout/input_num"
    />

</LinearLayout>
